静态页面开发完成

--- a/index.html
+++ b/index.html
@@ -47,15 +47,19 @@
         }
 
         #section1 {
-            background-image: url(img/img2.jpg);
+            background-color: #FDFFFF;
         }
 
         #section2 {
-            background-image: url(img/img3.jpg);
+            background-color: #FDFFFF;
         }
 
         #section3 {
-            background-image: url(img/img4.jpg);
+            background-color: #FDFFFF;
+        }
+
+        #section4 {
+            background-color: #FDFFFF;
         }
 
         /*以下样式用来设置slider样式，可自行修改*/
@@ -268,12 +272,14 @@
             /* background-color: rgba(0, 14, 72, 1) !important; */
         }
     </style>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
     <!-- 插件基本结构 -->
     <div id="container" data-XSwitch>
         <div class="sections">
+            <!-- 第一页 -->
             <div class="section" id="section0">
                 <div class="header">
                     <div class="title0"><a href="https://zhujingyu.com">Tyrant</a></div>
@@ -299,9 +305,123 @@
                     </div>
                 </div>
             </div>
-            <div class="section" id="section1"></div>
-            <div class="section" id="section2"></div>
+            <!-- 第二页 -->
+            <div class="section" id="section1">
+                <div class="container2">
+                    <div class="picLeft">
+                        <img src="./img/picLeft.png" alt="">
+                    </div>
+                    <div class="mainRight">
+                        <div class="header2">
+                            Christopher Vasquez
+                            <div class="tips">15 Tips To Increase Your Adwords Profits</div>
+                            <div class="tips2">For a time I worked in a convenience store as a clerk and cook and I used
+                                a deep fryer quite a bit for cooking battered chicken and French fried potatoes. </div>
+                        </div>
+                        <footer>
+                            <div class="learnMore"><a href="#"
+                                    class="more">LearnMore&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;></a>
+                            </div>
+
+                            <div class="share">SHARE</div>
+                            <div class="facebook"></div>
+                        </footer>
+                    </div>
+                </div>
+            </div>
+            <!-- 第三页 -->
+            <div class="section" id="section2">
+                <div class="mainbox">
+                    <div class="leftbox">
+                        <div class="titleText">Our Crew</div>
+                        <div class="describeText">If you own an Iphone, you’ve probably already worked out how much fun
+                            it is to use it to watch movies-it has that nice big screen, and the sound quality is
+                            surprisingly good too. §</div>
+                        <div class="date">
+                            02/ 05
+                        </div>
+                        <div class="arrowsBox">
+                            <div class="leftArrow">←</div>
+                            <div class="rightArrow">→</div>
+                        </div>
+                    </div>
+                    <div class="middleBox">
+                        <div class="artistPic">
+                            <img src="./img/artistPic.jpg" alt="Alejandro Evans">
+                        </div>
+                        <div class="bottomDes">
+                            <img src="./img/bottomDes.png" alt="">
+                        </div>
+                    </div>
+                    <div class="rightBox">
+                        <img src="./img/girl.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <!-- 第四页 -->
             <div class="section" id="section3">
+                <div class="mainBox2">
+                    <div class="titleBox">
+                        Xbox One Wireless Controller
+                    </div>
+                    <div class="titleBox2">
+                        Special Edition 2019
+                    </div>
+                    <div class="contentBox">
+                        <div class="leftside">
+                            <div class="pic1">
+                                <img src="./img/pic1.png" alt="">
+                            </div>
+                            <div class="pic2">
+                                <img src="./img/pic2.png" alt="">
+                            </div>
+                            <div class="pic3">
+                                <img src="./img/pic3.png" alt="">
+                            </div>
+                        </div>
+                        <div class="middleside">
+                            <div class="xboxPic">
+                                <img src="./img/xbox.png" alt="">
+                            </div>
+                            <div class="cart">
+                                Add To Cart
+                            </div>
+                            <div class="save">
+                                <img src="./img/save.png" alt="">
+                            </div>
+                        </div>
+                        <div class="rightside">
+                            <div class="price">
+                                <img src="./img/price.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- 第五页 -->
+            <div class="section" id="section4">
+                <div class="topBox">
+                    <div class="titleBox1">
+                        Want To Work With Me?
+                    </div>
+                    <div class="infoBox">
+                        <img src="./img/info.png" alt="">
+                    </div>
+                    <div class="send">
+                        Send Your Request
+                    </div>
+                </div>
+                <div class="middleBox2">
+                    <div class="box1">About me</div>
+                    <div class="box2">Company</div>
+                    <div class="box3">Works</div>
+                    <div class="box4">Contact</div>
+                    <div class="box5">Join us</div>
+                    <div class="box6">Login</div>
+                </div>
+                <div class="bottomBox2">
+                    <img src="./img/footer.png" alt="" class="footer">
+                </div>
             </div>
         </div>
     </div>
